TestCases/Errors/YFT_simulations/run.bat
..\..\..\build\windows\spm -r > run.log
